feat: implement welcome and goodbye messages with auto-role, AI, and customizable embed/canvas options.

--- a/config/.env.example
+++ b/config/.env.example
@@ -3,10 +3,21 @@ OPENAI_API_KEY=your_openai_api_key_here
 WELCOME_CHANNEL_ID=your_welcome_channel_id_here
 GEMINI_API_KEY=your_google_gemini_api_key_here
 
-# FITUR BARU (optional)
-USE_EMBED=false
-ENABLE_WELCOME_IMAGE=false
-ENABLE_STATS=true
+# ======== PENGATURAN MODUL BOT ========
+# Gunakan "on" untuk menyalakan fitur, atau "off" untuk mematikan
+
+FITUR_WELCOME=on
+FITUR_GOODBYE=on
+FITUR_STATS=on
+
+# ==== PENGATURAN TAMPILAN WELCOME ====
+USE_EMBED=on
+USE_CANVAS_IMAGE=on
+USE_GEMINI_AI=on
+
+# ========= FITUR AUTO ROLE =========
+FITUR_AUTO_ROLE=off
+AUTO_ROLE_ID=masukkan_discord_role_id_member_disini
 
 # Bot Owners (Discord User ID, pisah pakai koma)
 BOT_OWNERS=your_discord_user_id_here
