--- a/config/.env.example
+++ b/config/.env.example
@@ -8,7 +8,7 @@ GEMINI_API_KEY=your_google_gemini_api_key_here
 
 FITUR_WELCOME=on
 FITUR_GOODBYE=on
-FITUR_STATS=on
+FITUR_ROULETTE=on
 
 # ==== PENGATURAN TAMPILAN WELCOME ====
 USE_EMBED=on
