--- a/config/.env.example
+++ b/config/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 OPENAI_API_KEY=your_openai_api_key_here
 WELCOME_CHANNEL_ID=your_welcome_channel_id_here
+WELCOME_CHANNEL_BANNER_ID=your_welcome_channel_banner_id_here
 GEMINI_API_KEY=your_google_gemini_api_key_here
 
 # ======== PENGATURAN MODUL BOT ========
