feat: implement welcome message handler with AI integration, canvas image generation, and configurable options.

--- a/config/.env.example
+++ b/config/.env.example
@@ -12,6 +12,8 @@ FITUR_GOODBYE=on
 FITUR_ROULETTE=on
 
 # ==== PENGATURAN TAMPILAN WELCOME ====
+FITUR_WELCOME_MESSAGE=on
+FITUR_WELCOME_BANNER=on
 USE_EMBED=on
 USE_CANVAS_IMAGE=on
 USE_GEMINI_AI=on
